Fixed overflow of ChatRoom compoment once again

--- a/src/misc/App.css
+++ b/src/misc/App.css
@@ -78,7 +78,7 @@ html,body{
 }
 
 .content-column{
-  height: 94vh;
+  height: 100%; 
   background-color: #2e343a !important;
 }
 
